Added Particle Light rings for Alan and Audio cue for Background Music

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,17 +154,18 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints/CommandInterface
+ContentBrowserTab1.SelectedPaths=/Game/ParticleFX
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
-WindowSize=X=1274.400 Y=666.400
+WindowSize=X=1274.000 Y=666.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -181,7 +182,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1033,26 +1034,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/FloorPlane1
-MRUItem1=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem2=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem3=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem4=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem5=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem6=/Game/ParticleFX/spraySystemBP
-MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem8=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem10=/Game/PuzzleBP/Blueprints/ALANFaces
-MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem13=/Game/ParticleFX/spraySystem
-MRUItem14=/Game/ParticleFX/sprayTestBP
-MRUItem15=/Niagara/Modules/Emitter/EmitterState
-MRUItem16=/Game/Audio/Victory_Jingle/victoryjingle_Cue
-MRUItem17=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem18=/Game/PuzzleBP/Blueprints/Cube
-MRUItem19=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem0=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem1=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem2=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem3=/Game/Materials/FloorPlane1
+MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem5=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem6=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem7=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem9=/Game/ParticleFX/spraySystemBP
+MRUItem10=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem11=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem13=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem15=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem16=/Game/ParticleFX/spraySystem
+MRUItem17=/Game/ParticleFX/sprayTestBP
+MRUItem18=/Niagara/Modules/Emitter/EmitterState
+MRUItem19=/Game/Audio/Victory_Jingle/victoryjingle_Cue
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2495,8 +2496,12 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/ParticleFX/spraySystemBP.spraySystemBP=1
 /Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint.IORail2_IOconnectBox_001_Blueprint=1
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
+/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue.looping_factory_ambience__inspectorj-a__Cue=1
+/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem;
+RecentlyPlaced=/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue;
 RecentlyPlaced=/Game/Materials/FloorPlane1.FloorPlane1;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
@@ -2515,8 +2520,6 @@ RecentlyPlaced=/Game/Geometry/Meshes/FactoryLight.FactoryLight;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Ceiling.WallsPrebuilt_Ceiling;
 RecentlyPlaced=/Game/Geometry/Meshes/WallPlain.WallPlain;
-RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Floor.WallsPrebuilt_Floor;
-RecentlyPlaced=/Game/Geometry/Meshes/TemplateFloor.TemplateFloor;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2765,7 +2768,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
