Added code to mode alan left and right
timeline needs to be added for the lerp movement

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,14 +154,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/ParticleFX
+ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -182,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../../Users/student.HAL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1034,17 +1033,17 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem1=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem2=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem3=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem4=/Game/Materials/FloorPlane1
-MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem6=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem7=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem9=/Game/ParticleFX/spraySystemBP
-MRUItem10=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem0=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem3=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem4=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem5=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem6=/Game/Materials/FloorPlane1
+MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem8=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem10=/Game/ParticleFX/spraySystemBP
 MRUItem11=/Game/PuzzleBP/Blueprints/BoxChecker
 MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
 MRUItem13=/Game/PuzzleBP/Blueprints/ALANFaces
@@ -2501,6 +2500,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue=1
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem;
 RecentlyPlaced=/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue;
@@ -2519,7 +2519,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/HangingWorkLight.HangingWorkLight;
 RecentlyPlaced=/Game/Geometry/Meshes/FactoryLight.FactoryLight;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Ceiling.WallsPrebuilt_Ceiling;
 
 [PluginBrowser]
@@ -2529,7 +2528,7 @@ InstalledPlugins=VictoryBPLibrary
 [DetailPropertyExpansion]
 MaterialExpressionDynamicParameter="\"Object.ParamNames\" "
 MaterialExpression=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2538,9 +2537,9 @@ DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
