Added FX rings to Alan as well as code for music playing
music still needs to be fixed

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/PuzzleBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ParticleFX/AlanRings
 
 [EditorStartup]
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
@@ -181,7 +181,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/student.HAL/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=../../../../../Uni Year 3/Semester2/Group Project/Unreal Game/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1033,26 +1033,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem3=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem4=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem5=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem6=/Game/Materials/FloorPlane1
-MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem8=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem9=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem10=/Game/ParticleFX/spraySystemBP
-MRUItem11=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem12=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem13=/Game/PuzzleBP/Blueprints/ALANFaces
-MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem15=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
-MRUItem16=/Game/ParticleFX/spraySystem
-MRUItem17=/Game/ParticleFX/sprayTestBP
-MRUItem18=/Niagara/Modules/Emitter/EmitterState
-MRUItem19=/Game/Audio/Victory_Jingle/victoryjingle_Cue
+MRUItem0=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem1=/Game/Audio/Music/dynamicCue
+MRUItem2=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem3=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem4=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem6=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem7=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem8=/Game/Materials/FloorPlane1
+MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem10=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem11=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem12=/Game/ParticleFX/spraySystemBP
+MRUItem13=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem15=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectCylinders_001_Blueprint
+MRUItem18=/Game/ParticleFX/spraySystem
+MRUItem19=/Game/ParticleFX/sprayTestBP
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2337,6 +2337,22 @@ MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 BoxSpawner_C.TransformCommon=True
+SoundNodeParamCrossFade.CrossFade=True
+AudioComponent.Variable=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sockets=True
+AudioComponent.Sound=True
+AudioComponent.Attenuation=True
+AudioComponent.ComponentTick=True
+AudioComponent.Randomization=True
+AudioComponent.Attachment=True
+AudioComponent.Concurrency=True
+AudioComponent.Filter=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Cooking=True
+AudioComponent.Events=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2498,8 +2514,12 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue.looping_factory_ambience__inspectorj-a__Cue=1
 /Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue=1
+/Game/Audio/Music/dynamicCue.dynamicCue=1
+/Game/Audio/Music/alanbgminactive_Cue.alanbgminactive_Cue=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
+RecentlyPlaced=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue.looping_factory_ambience__inspectorj-a__Cue;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Game/ParticleFX/AlanRings/ringsSystem.ringsSystem;
@@ -2518,8 +2538,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/Geometry/Meshes/HangingWorkLight.HangingWorkLight;
-RecentlyPlaced=/Game/Geometry/Meshes/FactoryLight.FactoryLight;
-RecentlyPlaced=/Game/Geometry/Meshes/WallsPrebuilt_Ceiling.WallsPrebuilt_Ceiling;
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2588,7 +2606,7 @@ StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
 OutputDisplay_C=
-ALAN_C=
+ALAN_C="\"Object.RunCommands\" "
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2598,6 +2616,10 @@ BoxSpawner_C=
 BoxChecker_C=
 NiagaraComponent="\"Object.Tags.ComponentTags\" "
 FXSystemComponent="\"Object.Tags.ComponentTags\" "
+SoundNodeParamCrossFade="\"Object.CrossFade.CrossFadeInput\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[0]\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[1]\" "
+SoundNodeDistanceCrossFade="\"Object.CrossFade.CrossFadeInput\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[0]\" \"Object.CrossFade.CrossFadeInput.CrossFadeInput[1]\" "
+SoundNode=
+AudioComponent="\"Object.Tags.ComponentTags\" "
 
 [MaterialEditor]
 PrimType=1
