Pushed Ollie's puzzle files
Co-Authored-By: ollieiscool <101410504+ollieiscool@users.noreply.github.com>

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,10 +160,8 @@ ContentBrowserTab1.SelectedPaths=/Game/Materials
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Materials/ConveyorLightBase.ConveyorLightBase
-OpenAssetsAtExit=/Game/Materials/CRed.CRed
-OpenAssetsAtExit=/Game/Materials/CGreen.CGreen
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1036,21 +1034,21 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/CGreen
-MRUItem1=/Game/Materials/CRed
-MRUItem2=/Game/Materials/ConveyorRed
-MRUItem3=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem4=/Game/Audio/Music/dynamicCue
-MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem6=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem7=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem8=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem9=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem10=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem11=/Game/Materials/FloorPlane1
-MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem13=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem1=/Game/Materials/CGreen
+MRUItem2=/Game/Materials/CRed
+MRUItem3=/Game/Materials/ConveyorRed
+MRUItem4=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem5=/Game/Audio/Music/dynamicCue
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem8=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem9=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem10=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem11=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem12=/Game/Materials/FloorPlane1
+MRUItem13=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem14=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
 MRUItem15=/Game/ParticleFX/spraySystemBP
 MRUItem16=/Game/PuzzleBP/Blueprints/BoxChecker
 MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
