--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,6 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 CurrentScalingGridSize=0
 CurrentPosGridSize=0
+GridEnabled=False
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -162,6 +163,7 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1034,26 +1036,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem1=/Game/Materials/CGreen
-MRUItem2=/Game/Materials/CRed
-MRUItem3=/Game/Materials/ConveyorRed
-MRUItem4=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem5=/Game/Audio/Music/dynamicCue
-MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem7=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem8=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem9=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem10=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem11=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem12=/Game/Materials/FloorPlane1
-MRUItem13=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem14=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem15=/Game/ParticleFX/spraySystemBP
-MRUItem16=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem18=/Game/PuzzleBP/Blueprints/ALANFaces
-MRUItem19=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem0=/Game/Materials/ALANScreen
+MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/Materials/CGreen
+MRUItem4=/Game/Materials/CRed
+MRUItem5=/Game/Materials/ConveyorRed
+MRUItem6=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem7=/Game/Audio/Music/dynamicCue
+MRUItem8=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem10=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem11=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem12=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem13=/Game/Materials/FloorPlane1
+MRUItem14=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem15=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem16=/Game/ParticleFX/spraySystemBP
+MRUItem17=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem18=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem19=/Game/PuzzleBP/Blueprints/ALANFaces
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2610,8 +2612,8 @@ Box_Bp_C=
 StaticMeshComponent=
 BoxComponent="\"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Tags.ComponentTags\" "
-OutputDisplay_C="\"Object.PuzzleToLoad\" "
-ALAN_C="\"Object.RunCommands\" "
+OutputDisplay_C=
+ALAN_C=
 ConveyorBelt_C=
 Cube_C=
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
@@ -2795,7 +2797,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2853,12 +2855,12 @@ PreserveScaleRatio=True
 [DetailCustomWidgetExpansion]
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-MaterialInstanceConstant=
-StaticMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
+StaticMeshComponent=
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+OutputDisplay_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 ALAN_C=
 BrushComponent=
