Fixed a major bug with command execution
Fixed a bug that would prevent ALAN from altering his execution of commands depending on whether an 'if' command returned true or false - therefore conditional commands are now handled correctly

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -162,8 +162,10 @@ LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1036,25 +1038,25 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/ALANScreen
-MRUItem1=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem3=/Game/Materials/CGreen
-MRUItem4=/Game/Materials/CRed
-MRUItem5=/Game/Materials/ConveyorRed
-MRUItem6=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem7=/Game/Audio/Music/dynamicCue
-MRUItem8=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem10=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem11=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem12=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem13=/Game/Materials/FloorPlane1
-MRUItem14=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem15=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem16=/Game/ParticleFX/spraySystemBP
-MRUItem17=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem18=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem4=/Game/Materials/ALANScreen
+MRUItem5=/Game/Materials/CGreen
+MRUItem6=/Game/Materials/CRed
+MRUItem7=/Game/Materials/ConveyorRed
+MRUItem8=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem9=/Game/Audio/Music/dynamicCue
+MRUItem10=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem11=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem12=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem13=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem14=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem15=/Game/Materials/FloorPlane1
+MRUItem16=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem17=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
+MRUItem18=/Game/ParticleFX/spraySystemBP
 MRUItem19=/Game/PuzzleBP/Blueprints/ALANFaces
 
 [DetailCategories]
@@ -2860,9 +2862,9 @@ StaticMeshComponent=
 ControlPanel_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-OutputDisplay_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+OutputDisplay_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=
+ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
