--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,6 +166,8 @@ OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ALAN.ALAN
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxChecker.BoxChecker
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/Cube.Cube
+OpenAssetsAtExit=/Game/Audio/Music/alanbgmv3_Cue.alanbgmv3_Cue
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=180.000
@@ -1038,26 +1040,26 @@ SequencerWidgets.TimeStamp=2023.03.02-16.20.48
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem1=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem3=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem4=/Game/Materials/ALANScreen
-MRUItem5=/Game/Materials/CGreen
-MRUItem6=/Game/Materials/CRed
-MRUItem7=/Game/Materials/ConveyorRed
-MRUItem8=/Game/Audio/Music/alanbgminactive_Cue
-MRUItem9=/Game/Audio/Music/dynamicCue
-MRUItem10=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
-MRUItem11=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem12=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem13=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem14=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem15=/Game/Materials/FloorPlane1
-MRUItem16=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem17=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
-MRUItem18=/Game/ParticleFX/spraySystemBP
-MRUItem19=/Game/PuzzleBP/Blueprints/ALANFaces
+MRUItem0=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem1=/Game/PuzzleBP/Blueprints/Cube
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
+MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem6=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem7=/Game/Materials/ALANScreen
+MRUItem8=/Game/Materials/CGreen
+MRUItem9=/Game/Materials/CRed
+MRUItem10=/Game/Materials/ConveyorRed
+MRUItem11=/Game/Audio/Music/alanbgminactive_Cue
+MRUItem12=/Game/Audio/Music/dynamicCue
+MRUItem13=/Game/Audio/Ambience/looping_factory_ambience__inspectorj-a__Cue
+MRUItem14=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem15=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem16=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem17=/Game/Materials/FloorPlane1
+MRUItem18=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem19=/Game/Geometry/Meshes/Conveyor/ConveyorEnd_ConeyorEndScan_001
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2859,12 +2861,12 @@ SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 StaticMeshComponent=
-ControlPanel_C=SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ControlPanel_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 OutputDisplay_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-ALAN_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ALAN_C=
 BrushComponent=
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
